--- a/upscaling/requirements.txt
+++ b/upscaling/requirements.txt
@@ -1,15 +1,8 @@
-fastapi==0.115.8
-uvicorn==0.34.0
-pillow==11.1.0
+fastapi==0.115.0
+uvicorn==0.30.6
+opencv-python==4.10.0.84
+pillow==10.4.0
+numpy==1.26.4
+timm==1.0.14
 python-multipart==0.0.20
-opencv-python==4.11.0.86
-basicsr==1.4.2
-facexlib==0.3.0
-gfpgan==1.3.8
-numpy<2
-realesrgan==0.3.0
---index-url https://download.pytorch.org/whl/cu118
-torch==2.0.0
-torchvision==0.15.0
-# git+https://github.com/xinntao/Real-ESRGAN.git
-# git+https://github.com/TencentARC/GFPGAN.git
+# pip install torch==2.4.1 torchvision==0.19.1 -f https://download.pytorch.org/whl/cu121/torch_stable.html
