--- a/requirements.txt
+++ b/requirements.txt
@@ -5,4 +5,5 @@ pillow==10.4.0
 numpy==1.26.4
 timm==1.0.14
 python-multipart==0.0.20
+mediapipe==0.10.14
 # pip install torch==2.4.1 torchvision==0.19.1 -f https://download.pytorch.org/whl/cu121/torch_stable.html
